--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,6 +26,9 @@
                     {% if site.linkedin %}<li>
                         <a href="http://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a>
                     </li>{% endif %}
+                    {% if site.googlescholar %}
+                        <a href="https://scholar.google.com/{{ site.googlescholar }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-google-scholar-square"></i> GoogleScholar</a>
+                    {% endif %}
                     {% if site.xing %}<li>
                         <a href="http://www.xing.com/profile/{{ site.xing }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-xing-square"></i> Xing</a>
                     </li>{% endif %}
@@ -35,6 +38,9 @@
                     {% if site.tumblr %}<li>
                         <a href="http://{{ site.tumblr }}.tumblr.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-tumblr-square"></i> Tumblr</a>
                     </li>{% endif %}
+                    {% if site.etsy %}
+                        <a href="https://etsy.com/people/{{ site.etsy }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-etsy-square"></i> Etsy</a>
+                    {% endif %}
                     {% if site.github-url %}<li>
                         <a href="http://github.com/{{ site.github-url }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-github"></i> Github</a>
                     </li>{% endif %}
@@ -80,6 +86,7 @@
                     {% if site.xmpp %}<li>
                         <a href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lightbulb-o"></i> XMPP</a>
                     </li>{% endif %}
+                    
                     {% if site.hackernews %}<li>
                         <a href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i> Hacker News</a>
                     </li>{% endif %}
