--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -26,9 +26,9 @@
                     {% if site.linkedin %}<li>
                         <a href="http://linkedin.com/in/{{ site.linkedin }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-linkedin-square"></i> LinkedIn</a>
                     </li>{% endif %}
-                    {% if site.googlescholar %}
+                    {% if site.googlescholar %}<li>
                         <a href="https://scholar.google.com/{{ site.googlescholar }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-google-scholar-square"></i> GoogleScholar</a>
-                    {% endif %}
+                    </li>{% endif %}
                     {% if site.xing %}<li>
                         <a href="http://www.xing.com/profile/{{ site.xing }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-xing-square"></i> Xing</a>
                     </li>{% endif %}
@@ -38,9 +38,9 @@
                     {% if site.tumblr %}<li>
                         <a href="http://{{ site.tumblr }}.tumblr.com" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-tumblr-square"></i> Tumblr</a>
                     </li>{% endif %}
-                    {% if site.etsy %}
+                    {% if site.etsy %}<li>
                         <a href="https://etsy.com/people/{{ site.etsy }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-etsy-square"></i> Etsy</a>
-                    {% endif %}
+                    </li>{% endif %}
                     {% if site.github-url %}<li>
                         <a href="http://github.com/{{ site.github-url }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-github"></i> Github</a>
                     </li>{% endif %}
